# wanderlust

./: .devenv.flake.nix  .gitignore  App.tsx  Cargo.toml  Dioxus.toml  Dockerfile  README.md  app.json  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
assets/: styles.css
backend/: package-lock.json  package.json  tsconfig.json
backend/prisma/: dev.db  schema.prisma
backend/src/: database.ts  server.ts
src/: App.tsx  CountryDetails.tsx  CountryStatusContext.tsx  GlobeComponent.css  GlobeComponent.tsx  Toolbar.tsx  app.html  app.rs  countryStatusSlice.ts  geojson_handler.rs  lib.rs  main.rs  map_renderer.rs  models.rs  store.ts  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: StoreProvider.tsx  ThemeRegistry.tsx  globals.css  layout.tsx  page.tsx  store.ts  theme.ts
src/components/: CountryDetails.tsx  Globe.tsx  GlobeContainer.tsx  GlobeScene.tsx  Map.svelte  SettingsModal.tsx  Toolbar.tsx
src/components/maps/: Map2D.tsx  Map3D.tsx
src/contexts/: AccountContext.ts  CountryStatusContext.ts
src/interfaces/: index.ts
src/lib/: geojson_handler.ts  map_renderer.ts  models.ts  store.ts
src/maps/: Map2D.tsx  Map3D.tsx
src/pages/: WorldMapPage.tsx  index.tsx
src/pages/api/: country-statuses.ts  select-region.ts  update-country-status.ts
src/routes/: +page.svelte
src/store/: countryStatusSlice.ts  index.ts  selectedRegionSlice.ts
src/theme/: index.ts
src/utils/: colors.ts  coordinates.ts  index.ts  mapUtils.ts
static/: app.css  styles.css
(+3 files in other folders)
