[package]
name = "traveltint"
version = "0.1.0"
authors = ["WaoziXyz <waotzi@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-router = "0.5"
dioxus-logger = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["time"] }
futures-util = "0.3"
euclid = "0.22.11"

